[project]
name = "baseball"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "mlb-statsapi==1.9.0",
    "psycopg2-binary==2.9.10",
    "requests==2.32.3",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "urllib3==2.3.0",
]
